# video-analysis-agent

./: BLOCKERS.md  README.md  SECURITY.md  TEST_RESULTS.md  VIDEO_WALKTHROUGH_GUIDE.md  main.py  pyproject.toml  test_agent.py
output/: deviation_report.md
src/: __init__.py  main.py
src/agents/: __init__.py  deviation_analyzer_agent.py  log_parser_agent.py  orchestrator_agent.py  report_generator_agent.py  step_matcher_agent.py  test_output_agent.py  video_analyzer_agent.py
src/config/: __init__.py  agent_config.py
src/tools/: __init__.py  action_detector.py  log_parser.py  report_generator.py  step_matcher.py  test_output_parser.py  video_analyzer.py
test_output/: full_workflow_report.md  test_report.html  test_report.md
